finished sidebar and fixed table overflow

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,25 +7,5 @@
 .main-container main {
   width: 100%;
   position: relative;
-}
-
-.main-container main ::after {
-  content: "";
-  width: 20px;
-  height: 20px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #fff;
-  border-top-left-radius: 30px;
-}
-
-.main-container main ::before {
-  content: "";
-  width: 20px;
-  height: 20px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #212529;
+  padding: 20px;
 }
