--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -2,19 +2,20 @@
   height: 60px;
   background-color: #212529;
   color: white;
+  z-index: 100000;
 }
 
-.navbar .logo{
-    font-size: 1.7rem;
-    padding: 10px 20px;
+.navbar .logo {
+  font-size: 1.7rem;
+  padding: 10px 20px;
 }
 
-.navbar .logo span:nth-child(1){
-    color: #5bc0de;
+.navbar .logo span:nth-child(1) {
+  color: #5bc0de;
 }
-.navbar .logo span:nth-child(2){
-    color: #f0ad4e;
+.navbar .logo span:nth-child(2) {
+  color: #f0ad4e;
 }
-.navbar .logo span:nth-child(3){
-    color: #d9534f;
+.navbar .logo span:nth-child(3) {
+  color: #d9534f;
 }
