--- a/src/components/sidebar/SideBar.module.css
+++ b/src/components/sidebar/SideBar.module.css
@@ -1,6 +1,28 @@
 .aside {
   background-color: #212529;
   color: #fff;
-  padding: 30px 0px;
+  padding: 50px 0px 0px 10px;
+  width: 250px;
+  position: relative;
 }
 
+.aside::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 0;
+  right: -20px;
+  background-color: #fff;
+  border-top-left-radius: 30px;
+}
+
+.aside::before {
+  content: "";
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 0;
+  right: -20px;
+  background-color: #212529;
+}
